# -

./: .replit  aiogram 2 .py  app.py  bot_manager.py  gemini_test.py  main.py  main_gemini.py  main_http.py  models.py  pyproject.toml  replit.md  requirements.txt  routes.py  test.py
instance/: telegram_bot.db
static/js/: dashboard.js
templates/: base.html  config.html  dashboard.html  logs.html  posts.html
