[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.11.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "openai>=1.99.9",
    "psycopg2-binary>=2.9.10",
    "python-telegram-bot>=22.3",
    "pytz>=2025.2",
    "sqlalchemy>=2.0.43",
    "telegram>=0.0.1",
    "werkzeug>=3.1.3",
]
